arkts_static_test/13_Namespaces_Modules/ets_cases/13.1_Module_Declarations/compile-pass/NSM_13_01_001_PASS_MODULE_BASIC.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/*
 * @id NSM_13_01_001_PASS_MODULE_BASIC
 * @expect compile-pass
 * @section 13.1
 * @design Basic module without explicit module header
 */

function main(): void {
    console.log("Module basic works")
}
